# FightDetectionPoseLSTM

./: 1_MultipleVideoFrameExtraction.py  2_AngleVectorsCalculation.py  3_AngleVectorsAdjustement.py  4_1_LSTMClassification.py  4_2_MLClassification.py  GuptaOpenPoseImplementation.py  README.md  extract_frames.py  pyproject.toml  run_open_pose_on_image.py  test_frame_extractor.py  test_image_transforms.py  test_open_pose_on_image.py  train_openpose_lstm.py  utils.py
AngleMatrices/: angles.txt
Dataset/nonviolent/: nonv
Dataset/violent/: violent
OpenPoseImages/: images.txt
OpenPoseMatrices/: mat.txt
TestMatrices/: matr.txt
configs/: dataclasses.py  extraction_config.json  test_open_pose_config.json  train_config.json
models/: open_pose_gupta.py  sklearn_models.py  tensorflow_lstm.py
src/fight_detection_pose_lstm/: config.py  frame_extraction.py  model_base.py  skeletons.py  train.py  utils.py
src/fight_detection_pose_lstm/image_transformations/: base.py  constants.py  denoising.py  edges.py  utils.py
src/fightdetectionposelstm/: frame_extraction.py  skeletons.py
src/fightdetectionposelstm/image_transformations/: denoising.py  edges.py  utils.py
tests/: test_frame_extractor.py  test_image_transforms.py  test_open_pose.py  test_skeleton.py
