[project]
name = "fight_detection_pose_lstm"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.13.0.92",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
tensorflow = [
    "tensorflow>=2.21.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fight_detection_pose_lstm"]


# pytest.ini
[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "info"
log_level = "info"
testpaths =[
    "src",
]
